--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,17 @@
 <section class="firstSection">
     <nav class="navbar navbar-light bg-dark" >
         <a class="navbar-brand px-2">
-            <img src="../../../assets/logo.jpeg" class="logo" alt="" />
-            <h5 class="text-white mt-1">Let's Talk English</h5>
-          </a>
-          <div class="col-md-4 text-end px-3">
-            <button class="btn btn-danger" (click)="logOut()">Logout</button>
-          </div>
+          <img src="../../../assets/logo.jpeg" class="logo" alt="" />
+          <h5 class="text-white mt-1">Let's Talk English</h5>
+        </a>
+        <ul class="navbar-nav"style="margin-left:auto ;">
+            <li class="nav-item active">
+              <a class="nav-link text-white" [routerLink]="['/profile']"><span><i class="fa fa-user-o" aria-hidden="true"></i></span> My Profile</a>
+            </li>
+        </ul>
+        <div class="col-md-2 text-end px-3">
+          <button class="btn btn-danger" (click)="logOut()">Logout</button>
+        </div>
       </nav>
 </section>
 
