--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -10,6 +10,7 @@
       </nav>
 </section>
 <section class="secondSection">
+    <app-success-alert></app-success-alert>
     <div class="container">
     <h4 class="text-muted"> Payment</h4>
     <div class="update row">
