--- a/src/app/components/quest/quest.component.html
+++ b/src/app/components/quest/quest.component.html
@@ -22,6 +22,7 @@
       </nav>
 </section>
 <section class="secondSection">
+    <app-success-alert></app-success-alert>
     <div class="container mt-4">
         <h4 class="text-muted">Question</h4>
         <div class="update ">
