--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -22,6 +22,7 @@
       </nav>
 </section>
 <section class="secondSection">
+  <app-success-alert></app-success-alert>
     <div class="container mt-3">
         <h2 class="text-muted">Users List</h2>
         <div class="mb-3 col-md-5">
