--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -15,7 +15,7 @@
     margin: 0px;
     text-align: center;
     cursor: pointer;
-    background-color: rgb(45, 40, 57);
+    background-color: rgb(45, 40, 57, 0.3);
 }
 label {
     font-weight: bold;
