--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -36,11 +36,18 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <div class="col-md-6 mt-5 text-center shadow rounded box">
+                <div class="col-md-6 mt-5 text-center shadow rounded box ">
                     <h3 class="text-dark">Total Amount Recieved</h3><hr>
                     <h2 class="text-danger">{{paidUser.length * 100  |currency:'INR':'symbol' }}</h2>
                 </div>
+                <div class="col-md-6 mt-5 text-center shadow rounded box ">
+                    <h3 class="text-dark">Total Questions</h3><hr>
+                    <h2 class="text-danger">{{totalQuestions}}</h2>
+                </div>
             </div>
+            
+               
+            
         </div>
         
       </div>
