--- a/src/app/components/setting/setting.component.css
+++ b/src/app/components/setting/setting.component.css
@@ -34,3 +34,13 @@ label {
     -webkit-appearance: none;
     margin: 0;
   }
+  .alert-success {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+    margin: 0;
+    border-radius: 0;
+    text-align: center;
+  }
