--- a/src/app/components/user/user.component.css
+++ b/src/app/components/user/user.component.css
@@ -15,7 +15,7 @@
     margin: 0px;
     text-align: center;
     cursor: pointer;
-    background-color: rgb(45, 40, 57);
+    background-color: rgb(45, 40, 57,0.3);
 }
 /* table.component.scss */
 .container {
@@ -47,4 +47,14 @@
   .table{
     border: 1px rgb(109, 139, 104) solid;
     min-height: 400px;
+  }
+  .alert-success {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+    margin: 0;
+    border-radius: 0;
+    text-align: center;
   }
