--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -44,6 +44,7 @@
   </nav>
 </section>
 <section class="secondSection">
+  <img alt="">
   <app-success-alert></app-success-alert>
 <!-- Mo dal -->
 <div class="modal fade" id="forgetModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
