--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -16,7 +16,7 @@
     <div class="update row">
         <h6 class="text-begin text-primary mt-2">
             Hi <span style="color: rgb(2, 22, 55);">{{prefill.name}}</span> , <br> You need to purchase this eLearning module to start learning.<br> Thank you. <hr>
-           <span class="text-danger">Total amount of 100/-</span> 
+           <span class="text-danger">Total amount of {{amount}}/-</span> 
         </h6>
         <div class="text-center">
             <button class="btn btn-primary mt-5" (click)="payNow()">Pay Now</button>
