--- a/src/app/components/course-content/course-content.component.html
+++ b/src/app/components/course-content/course-content.component.html
@@ -4,7 +4,7 @@
             <img src="../../../assets/logo.jpeg" class="logo" alt="" />
             <h5 class="text-white mt-1">Let's Talk English</h5>
           </a>
-          <div class="text-center"><button class="btn btn-success btn-lg" data-bs-toggle="modal" data-bs-target="#startModal" >Start Exam <i class="fa fa-file-text-o" aria-hidden="true"></i></button></div>
+          <div class="text-center"><button *ngIf="exam!='PASS'" class="btn btn-success btn-lg" data-bs-toggle="modal" data-bs-target="#startModal" >Start Exam <i class="fa fa-file-text-o" aria-hidden="true"></i></button></div>
           <div class="col-md-4 text-end px-3">
             <button class="btn btn-danger" (click)="logOut()">Logout</button>
           </div>
