--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
       </nav>
 </section>
 
-<header class="d-flex justify-content-center">
+<header class="d-flex justify-content-center shadow">
     <img src="../../../assets/logo.jpeg" class="logo1" alt="" />
     <h1>Welcome to <span style="font-style: italic;">  Let's Talk English</span></h1>
 </header>
