--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -23,7 +23,7 @@
 </section>
 <section class="secondSection">
     <div class="container mt-4">
-        <h4 class="text-muted"> My Profile</h4>
+        <h4 class="text-muted">App Settings</h4>
         <div class="update ">
             <form [formGroup]="settings" (ngSubmit)="update()" class="row">
             <div class="col-md-6">
