--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -8,15 +8,22 @@
     margin-top: 5%;
     padding: 20px 25px;
     border-radius: 15px;
-    min-width: 650px;
-    margin-left: 15%;
-    background-color: white;
+    /* min-width: 650px; */
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(227, 247, 249);
 }
 .logo{
     width: 70px;
     height: 70;
     border-radius: 35px;
     margin-left: 20px;
+}
+footer {
+    background-color: #075ebc;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
 }
 .navbar{
     padding-left: 1%;
