--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -31,8 +31,12 @@
                 <input type="number" class="form-control" id="feesAmount" formControlName="feesAmount" placeholder="Course Fees Amount">
             </div>
             <div class="col-md-6">
-                <label for="">Pass Percentage of examination</label>
+                <label for="">Pass Percentage of Examination</label>
                 <input type="number" class="form-control" id="passPercentage" formControlName="passPercentage" placeholder="Pass Percentage">
+            </div>
+            <div class="col-md-6">
+                <label for="">Question Time Limiter</label>
+                <input type="number" class="form-control" id="questionTimer" formControlName="questionTimer" placeholder="Question Time Limiter">
             </div>
             <div class="w-100 text-center mt-5">
                 <button class="btn btn-lg btn-outline-success"  type="submit">Update Settings</button>
