--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -38,6 +38,10 @@
                 <label for="">Question Time Limiter</label>
                 <input type="number" class="form-control" id="questionTimer" formControlName="questionTimer" placeholder="Question Time Limiter">
             </div>
+            <div class="col-md-6">
+                <label for="">Questions Count</label>
+                <input type="number" class="form-control" id="questionCount" formControlName="questionCount" placeholder="Questions Count">
+            </div>
             <div class="w-100 text-center mt-5">
                 <button class="btn btn-lg btn-outline-success"  type="submit">Update Settings</button>
             </div>
