--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -60,12 +60,12 @@
         <div class="update1 mt-5 rounded">
             <form [formGroup]="resetPassword" (ngSubmit)="resetPass()" class="row">
                 <div class="col-md-6">
-                    <label for="">Old Password</label>
-                    <input type="password" class="form-control" id="o-password" formControlName="oldPassword">
+                    <label for="">Current Password</label>
+                    <input type="password" class="form-control" id="o-password" formControlName="oldPassword" placeholder="Current Password">
                 </div>
                 <div class="col-md-6 ">
                     <label for="">New Password</label>
-                    <input type="password" class="form-control"  id="n-password" formControlName="newPassword">
+                    <input type="password" class="form-control"  id="n-password" formControlName="newPassword" placeholder="New Password">
                 </div>
                 <div class="w-100 text-center mt-5">
                     <button class="btn btn-lg btn-outline-danger"  type="submit">Reset Password</button>
