--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -34,11 +34,11 @@
                 <label for="">Pass Percentage of Examination</label>
                 <input type="number" class="form-control" id="passPercentage" formControlName="passPercentage" placeholder="Pass Percentage">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-3">
                 <label for="">Question Time Limiter</label>
                 <input type="number" class="form-control" id="questionTimer" formControlName="questionTimer" placeholder="Question Time Limiter">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-3">
                 <label for="">Questions Count</label>
                 <input type="number" class="form-control" id="questionCount" formControlName="questionCount" placeholder="Questions Count">
             </div>
